[package]
name = "rssterm"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
tokio = { version = "1", features = ["full"] }
rss = "2.0"
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio-stream = "0.1.17"
chrono = "0.4.41"
textwrap = "0.16.2"
chrono-humanize = "0.2.3"
open = "5.3.2"
html2text = "0.15.0"
ratatui-macros = "0.6.0"
itertools = "0.14.0"
tui-scrollview = "0.5.1"
