[package]
name = "rssterm"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
tokio = { version = "1", features = ["full"] }
rss = "2.0"
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio-stream = "0.1.17"
chrono = "0.4.41"
textwrap = "0.16.2"
chrono-humanize = "0.2.3"
open = "5.3.2"
html2text = "0.15.0"
ratatui-macros = "0.6.0"
itertools = "0.14.0"
clap = { version = "4.5.38", features = ["derive", "env", "string"] }
atom_syndication = "0.12.7"
directories = "6.0.0"
throbber-widgets-tui = "0.8.0"
termios = { version = "0.3.3", optional = true }
rand = { version = "0.9.1", optional = true }
url = "2.5.4"

[features]
fun = ["dep:termios", "dep:rand"]

[[bin]]
name = "tty_debug"
path = "src/bin/tty_debug.rs"
required-features = ["fun"]
